# reddie

./: .env.example  .gitignore  FEATURES.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.js  vitest.config.mjs
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: CONVENTIONS.md  FEATURES.md
e2e/: app-launch.spec.js
specs/: execution-status.yaml  planning-status.yaml  release-plan.yaml  state.yaml
specs/bugs/: registry.yaml
specs/product/: GLOSSARY_LATEST.yaml  SCOPE_LATEST.yaml  VISION_LATEST.yaml
specs/tech-architecture/: tech-stack.md
src/: config-store.js  index.html  inline-images.js  issue-detail-helpers.js  main.js  preload.js  redmine-client.js  redmine-macros.js  renderer.js  styles.css  text-format.js  timer.js  tray-popover.html  tray-popover.js  tray-preload.js  urgency.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/__tests__/: inline-images.test.js  issue-detail-helpers.test.js  pagination.test.js  redmine-client.test.js  redmine-macros.test.js  retry.test.js  same-instance-image.test.js  text-format.test.js  timer.test.js  urgency.test.js
